--- a/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
@@ -260,27 +260,209 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>240</td>\n",
+       "      <td>16</td>\n",
+       "      <td>35</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-99999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>158</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>138</td>\n",
+       "      <td>58</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-99999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>255</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-99999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>12 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0    1    2   3   4    5   6   7   8   9   ...    21  22   23  24  25  26  \\\n",
-       "0    0    0  272   0   0    0   0   9  26   1  ...     1  15  224   0   0   0   \n",
-       "1   61  103    0   2   0    0   0   2   0  68  ...     0   0    5   0   0   0   \n",
-       "2    2    0   17  27   0   10   0   0  30  25  ...    26   0    0   9   6  78   \n",
-       "3  260    1    0   0   0    1   3   0   5   0  ...     0   0    0   0   9  35   \n",
-       "4   47    0    0   0   5  115  49  81   0   0  ...     0   0    0   0   0   2   \n",
+       "     0    1    2   3    4    5   6   7   8    9   ...    21  22   23   24  \\\n",
+       "0     0    0  272   0    0    0   0   9  26    1  ...     1  15  224    0   \n",
+       "1    61  103    0   2    0    0   0   2   0   68  ...     0   0    5    0   \n",
+       "2     2    0   17  27    0   10   0   0  30   25  ...    26   0    0    9   \n",
+       "3   260    1    0   0    0    1   3   0   5    0  ...     0   0    0    0   \n",
+       "4    47    0    0   0    5  115  49  81   0    0  ...     0   0    0    0   \n",
+       "5     0    0   30  42    0    0   0   0   0    0  ...     0   2    2  240   \n",
+       "6     0    0    0   0    0    0   0   7   0    0  ...     0   0    0   10   \n",
+       "7     0   45    0   0    0    0   0   0   5    0  ...     0   0  158   62   \n",
+       "8     0    0    0   0    0    0   0   0   0    0  ...    37   0    0    0   \n",
+       "9     0    0    0  14  156    0   0   0   0  110  ...     0   0    0    0   \n",
+       "10    1  163    5   0    0    0   0   0   0    0  ...     0   2    2   10   \n",
+       "11    0    0    0   0    0   45   0   0   0   15  ...    34   0    0    0   \n",
        "\n",
-       "   27     28     29     30  \n",
-       "0   0      0     33     33  \n",
-       "1  62 -99999 -99999 -99999  \n",
-       "2   0      5      8      0  \n",
-       "3  13     86      0 -99999  \n",
-       "4   0      0      0      0  \n",
+       "     25  26   27     28     29     30  \n",
+       "0     0   0    0      0     33     33  \n",
+       "1     0   0   62 -99999 -99999 -99999  \n",
+       "2     6  78    0      5      8      0  \n",
+       "3     9  35   13     86      0 -99999  \n",
+       "4     0   2    0      0      0      0  \n",
+       "5    16  35   14     14      8 -99999  \n",
+       "6     0   0    5      0      0      0  \n",
+       "7     1   0    0      0      0      0  \n",
+       "8     0   6  138     58     10 -99999  \n",
+       "9     0   0    0      0      0      1  \n",
+       "10  255   2    0      0      0 -99999  \n",
+       "11    0   0    0      0      0      0  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[12 rows x 31 columns]"
       ]
      },
      "execution_count": 3,
@@ -290,7 +472,7 @@
    ],
    "source": [
     "print(df.shape)\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -315,7 +497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next use Python's ```type()``` function to verify the variable ```wd``` is a NumPy array. The code cell below will print ```wd```'s data type."
+    "Next use Python's ```type()``` function to verify the variable ```wd``` is a NumPy array. Also verify that the NumPy array is 5 by 31, which is the same dimensions (how many rows, how many columns) as the dataframe ```df``` that we previously printed out.\n",
+    "\n",
+    "The code cell below prints ```wd```'s data type and prints the dimensions of ```wd```"
    ]
   },
   {
@@ -327,12 +511,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "<class 'numpy.ndarray'>\n",
+      "(12, 31)\n"
      ]
     }
    ],
    "source": [
-    "print(type(wd))"
+    "print(type(wd))\n",
+    "print(wd.shape)"
    ]
   },
   {
@@ -341,9 +527,9 @@
    "source": [
     "### Clean up the data\n",
     "\n",
-    "The weather data is in hundredths of an inch. Multiply each value in the array by ```0.01``` so that the array contains rain fall in inches (not hundredths of an inch). Next, convert all the values in the array ```wd``` which are equal to ```-99999``` and set them to ```NaN``` (not a number). NumPy has a special ```NaN``` type which allows the location of the ```NaN``` value to stay in the array. The ```NaN``` values will not interfere with calculations, like leaving a ```-99999``` in the array would. \n",
+    "The weather data is in hundredths of an inch. Multiply each value in the array by ```0.01``` so that the array contains rain fall in inches (not hundredths of an inch).\n",
     "\n",
-    "The code cell below shows how to convert the data to inches of rainfall and convert all the -99999 into NumPy's ```NaN``` data type. The command ```wd<0``` created a boolean mask. The boolean mask is the same size as ```wd```, but only contains ```True``` or ```Flase```. In the mask, all locations where ```wd<0``` are set to ```True```; all other values in the boolean mask are set to ```False```. We then use the boolean mask to index the array. We set the value ```np.nan``` (NumPy's not a number type) at all the locations in ```wd``` where the boolean mask is set to ```True```."
+    "The code cell below shows how to convert the weather data from hundredths of an inch to inches. When the multiplication symbol ```*``` is used with a NumPy array, the multiplication is element-wise. This means each value in the array is multiplied by the scalar ``0.01```. "
    ]
   },
   {
@@ -352,23 +538,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wd = wd*0.01\n",
-    "wd[wd<0] = np.nan"
+    "wd = wd*0.01"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define a month array and compute statistics\n",
-    "\n",
+    "### Define a month array and remove -99999 values\n",
+    " \n",
     "Define a variable called ```m``` and set it equal to ```1``` for now (Month ```1``` is February, remember Python counting starts at 0).  ```m``` represents the month for which we will compute statistics.  Later, you will change ```m``` to other values.  ```0``` means January, ```1``` means February, and so on.\n",
     "\n",
     "Use the value in ```m``` to extract that month's data from your ```wd``` array. Store these values in an array called ```md``` (for month data).  Since February has 28 days, you will see positive numbers, zeros and ```NaN``` present in the array.\n",
     "\n",
     "For example, according to our data, the rainfall for the first 3 days in February are ```0.61``` inches, ```1.03``` inches, and ```0``` inches.\n",
     "\n",
-    "The Jupyter notebook cell which shows this operation is below. Note how indexing is used to pull out all of the values from one row. The general syntax for indexing a NumPy array is ```array[row,col]```. If we use ```wd[1,:]```, this means ```row=1```, ```col=all``` (row one, all columns)."
+    "The Jupyter notebook cell which shows this operation is below. Note how indexing is used to pull out all of the values from one row. The general syntax for indexing a NumPy array is ```array[row,col]```. If we use ```wd[1,:]```, this means ```row=1```, ```col=all``` (row one, all columns). Note the values ```-9.9999``` present in the array ```md```."
    ]
   },
   {
@@ -380,15 +565,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.61 1.03 0.   0.02 0.   0.   0.   0.02 0.   0.68 0.03 0.03 0.01 0.\n",
-      " 0.   0.   0.01 1.35 0.03 0.66 0.   0.   0.   0.05 0.   0.   0.   0.62\n",
-      "  nan  nan  nan]\n"
+      "[ 6.1000e-01  1.0300e+00  0.0000e+00  2.0000e-02  0.0000e+00  0.0000e+00\n",
+      "  0.0000e+00  2.0000e-02  0.0000e+00  6.8000e-01  3.0000e-02  3.0000e-02\n",
+      "  1.0000e-02  0.0000e+00  0.0000e+00  0.0000e+00  1.0000e-02  1.3500e+00\n",
+      "  3.0000e-02  6.6000e-01  0.0000e+00  0.0000e+00  0.0000e+00  5.0000e-02\n",
+      "  0.0000e+00  0.0000e+00  0.0000e+00  6.2000e-01 -9.9999e+02 -9.9999e+02\n",
+      " -9.9999e+02]\n"
      ]
     }
    ],
    "source": [
     "m = 1\n",
     "md = wd[1,:]\n",
+    "print(md)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step is to remove all of the ```-9.9999``` values from the ```md``` array. If we find the average of the values in ```md``` now, which corresponds to the average rainfall in February, the value that's returned doesn't make sense. There is no way the rain fall could be negative. \n",
+    "\n",
+    "The code cell below shows how to find the average of the values in the array ```md```. Note that ```-9.9999``` values are present in the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-96.60709677419354"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(md)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To remove the -9.9999 values from the array, use a boolean mask.\n",
+    "\n",
+    "The command ```md>-1``` creates a boolean mask. The boolean mask is an array the same size as ```md```, but only contains ```True``` or ```False``` as values. In the mask, all locations where ```md>-1``` are set to ```True```; all other values in the boolean mask are set to ```False``` (We use ```md>-1``` instead of ```md>0``` because we want to keep the ```0``` values, we just want to get rid of the ```-9.9999``` values). \n",
+    "\n",
+    "The code cell below produces the boolean mask. Note how the last three elements are ```False```. The ```False``` values are in the same location as the ```-9.9999``` values in ```md```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True, False, False, False])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "md>-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pull out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. We put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
+    "\n",
+    "The code cell below creates the boolean mask, indexes out values from ```wd``` based on the mask, and puts the results back into ```wd```, which as a result does not contain ```-9.9999``` in any location."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.61 1.03 0.   0.02 0.   0.   0.   0.02 0.   0.68 0.03 0.03 0.01 0.\n",
+      " 0.   0.   0.01 1.35 0.03 0.66 0.   0.   0.   0.05 0.   0.   0.   0.62]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = md>-1\n",
+    "md = md[mask]\n",
     "print(md)"
    ]
   },
