small edits to Lab 3

--- a/ENGR114-Labs/Lab03-RLC-Circuit/ENGR114-Lab03-RLC-Circuit.ipynb
+++ b/ENGR114-Labs/Lab03-RLC-Circuit/ENGR114-Lab03-RLC-Circuit.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "The context of this lab involves a series circuit with an AC voltage source, one resistor, one capacitor, and one inductor.  You do not have to worry about the circuit analysis, as that part will be done for you.  The voltage source has a frequency of 60 hertz, and an amplitude of 120 volts RMS. The resistor has 100 ohms of resistance.  Don't be concerned with these these parameters because the source amplitude and voltage as well as the resistor resistance is built into the equations shown later in the la."
+    "The context of this lab involves a series circuit with an AC voltage source, one resistor, one capacitor, and one inductor.  You do not have to worry about the circuit analysis, as that part is done for you.  The voltage source has a frequency of 60 hertz, and an amplitude of 120 volts RMS. The resistor has 100 ohms of resistance.  Don't be concerned with these these parameters because the source amplitude and voltage as well as the resistor resistance is built into the equations shown later in the lab."
    ]
   },
   {
@@ -36,22 +36,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a NumPy array ```L``` with values that start at 0.005 and go to 0.245 in increments of 0.005.  Then create an NumPy array ```C``` with 10 evenly spaced values starting with $5 \\times 10^{-6}$ and end with $9.5 \\times 10^{-5}$ (NumPy's ```np.linspace()``` function is useful here)."
+    "Create a NumPy array ```L``` with values that start at ```0.005``` and go to ```0.245``` in increments of ```0.005```.  Then create an NumPy array ```C``` with 10 evenly spaced values starting with $5 \\times 10^{-6}$ and end with $9.5 \\times 10^{-5}$ (NumPy's ```np.linspace()``` function is useful here)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a value for $L$ and a value for $C$, the circuit's current can be calculated as follows:\n",
+    "Given a values for $L$ and $C$, the circuit's current can be calculated as follows:\n",
     "\n",
     "$$ \\frac{{120}}{{100 + j2\\pi \\left( {60} \\right)L - \\frac{j}{{2\\pi \\left( {60} \\right)C}}}} $$\n",
     "\n",
-    "where $j$ is the square root of negative one.  The equation above shows current is a complex number.  From a complex result for current, one can compute the power delivered to the resistor with the equation below.\n",
+    "where $j$ is the square root of negative one.  The equation above demonstrates that current is a complex number.  From a complex result for current, one can compute the power delivered to the resistor with the equation below:\n",
     "\n",
     "$$ P_R = 100{\\left| I \\right|^2} $$\n",
     "\n",
-    "The absolute value symbol here $\\left| I \\right|^2$ specifically means \"the magnitude of I\".  There is a Python function that can compute the absolute value of a complex number.  For example, the smallest values for $L$ and $C$ yields a complex current of ```0.041458 + 0.21916i```, and a resulting power of ```4.9749```.  Use Python's  math module value for $\\pi$ or ```np.pi```."
+    "The absolute value symbol here $\\left| I \\right|^2$ specifically means \"the magnitude of **I**\".  There is a Python function which computes the absolute value of a complex number.  For example, the smallest values for $L$ and $C$ yields a complex current of ```0.041458 + 0.21916i```, and a resulting power of ```4.9749```.  Use Python's math module value for $\\pi$, or use NumPy's ```np.pi``` constant."
    ]
   },
   {
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
