edits to lab 4 plotting

--- a/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab04-Plotting_Weather_Data/ENGR114-Lab04-Plotting_Weather_Data.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last step of data cleaning is to convert the resulting dataframe ```df``` into a NumPy array ```wd```. Once the data is in a NumPy array, you will be able to index and slice it using regular NumPy operations. Print the NumPy array with the command ```print(wd)``` and see how the year, month and day have been converted to floats. Don't forget what the columns \n",
+    "The last step of data cleaning is to convert the resulting dataframe ```df``` into a NumPy array ```wd```. Once the data is in a NumPy array, you will be able to index and slice it using regular NumPy operations. Print the NumPy array with the command ```print(wd)``` and see how the year, month and day have been converted to floats. Don't forget what the columns correspond to.\n",
     "\n",
     "The code cell below shows how to convert the dataframe ```df``` into a NumPy array called ```wd```. "
    ]
@@ -391,7 +391,7 @@
    "source": [
     "### Create a line plot\n",
     "\n",
-    "Once the data is cleaned up, create a line plot with Matplotlib of precipitation in inches vs. time (in days since Jan 01, 2013). Include an x-axis label, a y-axis label, and a title on your plot. Look back at the column headers in the dataframe ```df``` to determine which column corresponds to Precipitation (inches). Use indexing to pull out all of the values from the precipitation column to build your plot.\n",
+    "Once the data is cleaned up, create a line plot with Matplotlib of precipitation in inches vs. time (in days since Jan 01, 2013). Include an x-axis label, a y-axis label, and a title on your plot. Look back at the column headers in the dataframe ```df``` to determine which column corresponds to ```Precipitation (inches)```. Use indexing to pull out all of the values from the precipitation column to build your plot.\n",
     "\n",
     "The resulting plot should look something like the plot below:\n",
     "\n",
@@ -434,11 +434,13 @@
    "source": [
     "### y-y plot\n",
     "\n",
-    "Use NumPy's ```np.where()``` function to save some of the snow depth data into a NumPy array called ```winter16_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to that file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include the data from the first day of November 2013 to the last day of February 2014.  Indexing out snow depth data in this date range will probably be the most difficult part of the lab.\n",
+    "Use boolean masking to save some of the snow depth data into a NumPy array called ```winter13_14_sd```.  Remember which column headers correspond to which measurement in the dataframe ```df```.  Refer to the dataframe or excel file, if need be, to see which column corresponds snow depth.  Your snow depth data set should only include measurements from the first day of November 2013 to the last day of February 2014.  Slicing or indexing out snow depth data in this date range is probably be the most difficult part of this lab.\n",
+    "\n",
+    " > Hint: Create multiple boolean masks and then combine the boolean masks with NumPy's ```np.logical_and()``` and ```np.logical_or()``` functions. These two NumPy functions operate like Python's ```and```, ```or``` keywords, but can be applied to arrays of boolean values.\n",
     "\n",
     "Index out the same days' (Nov 1, 2013 to Fab 27, 2014) snow fall data and save the snow fall data in this date range to a NumPy array called ```winter13_14_sf```.\n",
     "\n",
-    "Use the ```plt.plotyy()``` function to plot both sets of data on the same graph, but with different y-axes.  \n",
+    "Use Matplotlib's ```ax2 = ax1.twinx()``` method to plot both sets of data on the same graph (same x-axis), but with different y-axes.  \n",
     "\n",
     "Notice the figure has a different vertical axis on the left compared to the vertical axis on the right.  Let Matplotlib choose your axis limits and line colors.  Be sure to include the grid lines, x-axis label, y-axis labels, title, and legend as seen in the figure below.\n",
     "\n",
@@ -451,7 +453,7 @@
    "source": [
     "### Histogram\n",
     "\n",
-    "The last plot to create for this lab is a histogram. A histogram is a statistical plot that shows the frequency of values according to a number of different ranges. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
+    "The last plot to create for this lab is a histogram. A histogram is a statistical plot that shows the number of values that fall into different value ranges, called bins. Use your ```winter13_14_sf``` NumPy array to build the histogram. Include 10 bins in the histogram. Make sure to match all of the labels and title from the example histogram below.\n",
     "\n",
     "![Plot 5: Histogram](images/plot5.png)"
    ]
@@ -478,6 +480,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _By D. Kruger, modified by P. Kazarinoff, Portland Community College, 2019_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -501,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
